tests/compile-tests/bad_cmp_op.stderr
error: expected >=, <= or ==
 --> tests/compile-tests/bad_cmp_op.rs:6:14
  |
6 |     c!(x + y != 1 - z);
  |              ^^

error: expected >=, <= or ==
 --> tests/compile-tests/bad_cmp_op.rs:7:14
  |
7 |     c!(x + y < 1 - z);
  |              ^

error: expected >=, <= or ==
 --> tests/compile-tests/bad_cmp_op.rs:8:14
  |
8 |     c!(x + y > 1 - z);
  |              ^
